find us page spacing and font fixed

--- a/themes/inhabitent/sass/_find-us.scss
+++ b/themes/inhabitent/sass/_find-us.scss
@@ -1,3 +1,12 @@
+.page-id-17{
+    .site-main{
+        margin-top:6rem;
+    .entry-content{
+        margin-right:4rem;
+        }
+    }
+}
+
 label{
     text-transform: uppercase;
     font-family: "Novovento Sans Web Normal"
@@ -43,4 +52,11 @@ input[type=submit]:hover{
 
 .require{
     color: #d99054;
+}
+
+.page-id-17{
+    p{
+        max-width:760px;
+        font-family:'Merriweather';
+    }
 }
